--- a/src/app/component/experience/experience.component.scss
+++ b/src/app/component/experience/experience.component.scss
@@ -18,8 +18,8 @@
 .timeline {
   position: relative;
   border-left: 3px solid rgba(255, 255, 255, 0.1);
-  margin-left: 30px;
-  padding-left: 40px;
+  margin-left: 10px !important;
+  padding-left: 20px !important;
 
   .timeline-item {
     position: relative;
@@ -41,7 +41,7 @@
 
   .timeline-marker {
     position: absolute;
-    left: -53px;
+    left: -31px !important;
     width: 22px;
     height: 22px;
     border-radius: 50%;
@@ -50,14 +50,20 @@
     box-shadow: 0 0 10px rgba(179, 157, 219, 0.5);
     transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     z-index: 2;
+
+    .position {
+    font-size: 1.2rem !important;
+  }
   }
 }
 
 .timeline-content {
+  width: 100%;
+  max-width: calc(100vw - 80px);
   background: rgba(255, 255, 255, 0.07);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
-  padding: 30px;
+  padding: 20px !important;
   border-radius: 20px;
   border: 1px solid rgba(255, 255, 255, 0.15);
   box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
